# bioplastic_design

./: .gitignore  CITATION.bib  README.md  pyproject.toml
bioplastic_design/: candidates.txt  exp_values.pkl  screening.ipynb
